[package]
name = "adaptivegrain-rs"
version = "0.1.0"
authors = ["kageru"]
edition = "2018"

[dependencies]
failure = "0.1"
faster = "0.5"
lazy_static = "1.3.0"
num = "0.2"
rand = "0.6"
rand_xorshift = "0.1"
vapoursynth = "0.2"
vapoursynth-sys = "0.2"

[lib]
crate-type = ["cdylib"]

[profile.release]
debug = true

