[package]
name = "adaptivegrain-rs"
version = "0.2.2"
authors = ["kageru"]
edition = "2018"

[dependencies]
failure = "0.1.7"
lazy_static = "1.4.0"
vapoursynth = "0.3.0"
vapoursynth-sys = "0.3.0"

[lib]
crate-type = ["cdylib", "rlib"]

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "mask"
harness = false
